--- a/config.json
+++ b/config.json
@@ -2,5 +2,5 @@
     "router_address" : "192.168.2.1",
     "root_username" : "root",
     "root_password" : "asdf1234",
-    "database_name" : "database.db"
+    "database_name" : "data.db"
 }
